--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/MyContent/MyLevels/MaterialsMap.MaterialsMap
+EditorStartupMap=/Game/MyContent/MyLevels/MaterialsMap.MaterialsMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
